@@ -703,7 +703,7 @@ void error(int32 errnumber, ...) {
   vsprintf(errortext, errortable[errnumber].msgtext, parms);
   va_end(parms);
   basicvars.error_number = errortable[errnumber].equiverror;
-  if ((basicvars.error_number == 0) || (basicvars.error_number == 17)) star_refresh(1);
+  if (2 == get_refreshmode()) star_refresh(1);
   if (basicvars.current==NIL)           /* Not running a program */
     basicvars.error_line = 0;
   else {
